--- a/css/style.css
+++ b/css/style.css
@@ -2618,3 +2618,97 @@ body.modal-open {
     transform: translateY(-1px);
 }
 
+/* Hero Section */
+.about {
+  padding-top: 100px;
+}
+
+.about img {
+  border-radius: 8px;
+}
+
+.about-us {
+  display: flex;
+}
+
+.about-us .about-us_image {
+  padding-right: 10px;
+}
+
+.about-us .about-us_content {
+  padding-left: 10px;
+}
+
+.about-us_content h1 {
+  margin: 0;
+  font-size: 2rem;
+  color: #002855;
+}
+
+.about-us_content p {
+  color: #555;
+  margin: 0 0 15px 0;
+  font-size: 15px;
+}
+
+.about-us_content .btn {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #fca311;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.about-us_content .btn:hover {
+  background-color: #e5920e;
+}
+
+/* Features Section */
+.features {
+  padding: 60px 0;
+}
+
+.features-box {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  justify-content: center; 
+}
+
+.feature-card {
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 30px 20px;
+  text-align: center;
+  /* max-width: 300px; */
+  flex: 1 1 calc(33.333% - 30px); 
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.feature-card:hover {
+  transform: translateY(-5px); 
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+}
+
+.feature-card i {
+  font-size: 3rem;
+  color: #fca311;
+  margin-bottom: 15px;
+}
+
+.feature-card h3 {
+  font-size: 1.5rem;
+  margin: 15px 0;
+  color: #002855;
+  font-weight: bold;
+}
+
+.feature-card p {
+  color: #555;
+  line-height: 1.8;
+  font-size: 1rem;
+}
